--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,16 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
     <Button
+            android:text="EXIT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/exit2"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="60sp" android:padding="20dp"
+            android:backgroundTint="#F67808" android:visibility="visible" android:onClick="close"
+            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/play"
+    />
+    <Button
             android:text="PLAY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/play"
@@ -43,33 +53,33 @@
             android:layout_height="244dp"
             app:layout_constraintTop_toBottomOf="@+id/question" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/gridLayout">
+            android:id="@+id/gridLayout" app:columnCount="2" app:rowCount="2">
 
         <Button
                 android:text="Button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_gravity="fill" app:layout_row="0" app:layout_column="0"
+                android:layout_height="wrap_content" app:layout_gravity="fill"
                 android:id="@+id/A" app:layout_columnWeight="1" app:layout_rowWeight="1"
                 android:textSize="30dp" android:backgroundTint="#238727" android:onClick="check"
                 android:visibility="invisible"/>
         <Button
                 android:text="Button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_gravity="fill" app:layout_row="0" app:layout_column="1"
+                android:layout_height="wrap_content" app:layout_gravity="fill"
                 android:id="@+id/B" app:layout_columnWeight="1" app:layout_rowWeight="1"
                 android:textSize="30dp" android:backgroundTint="#A739C5" android:onClick="check"
                 android:visibility="invisible"/>
         <Button
                 android:text="Button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_gravity="fill" app:layout_row="1" app:layout_column="0"
+                android:layout_height="wrap_content" app:layout_gravity="fill"
                 android:id="@+id/C" app:layout_columnWeight="1" app:layout_rowWeight="1"
                 android:textSize="30dp" android:backgroundTint="#A6120F" android:onClick="check"
                 android:visibility="invisible"/>
         <Button
                 android:text="Button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" app:layout_gravity="fill" app:layout_row="1" app:layout_column="1"
+                android:layout_height="wrap_content" app:layout_gravity="fill"
                 android:id="@+id/D" app:layout_columnWeight="1" app:layout_rowWeight="1"
                 android:textSize="30dp" android:backgroundTint="#C0CA33" android:onClick="check"
                 android:visibility="invisible"/>
@@ -83,9 +93,9 @@
             android:layout_marginStart="103dp"
             android:layout_marginEnd="103dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="520dp"
-            android:visibility="invisible" android:layout_marginBottom="6dp"
-            app:layout_constraintBottom_toTopOf="@+id/play_again"/>
+            android:visibility="invisible"
+            app:layout_constraintHorizontal_bias="0.525" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/gridLayout"/>
     <Button
             android:text="PLAY AGAIN"
             android:layout_width="wrap_content"
@@ -94,7 +104,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:backgroundTint="#D5CDCD"
             android:visibility="invisible"
-            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/result"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="138dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/result"
             android:onClick="start"/>
+    <Button
+            android:text="exit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:backgroundTint="#D5CDCD"
+            android:visibility="invisible"
+            android:onClick="close" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/play_again" android:id="@+id/close"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
